# sdspi

./: CMakeLists.txt  STM32L152RBTx_FLASH.ld  spi.logicsettings
include/: fatfs.h  ffconf.h  main.h  sd.h  stm32l1xx_hal_conf.h  stm32l1xx_it.h  uart_print.h
src/: fatfs.c  main.c  sd.c  startup_stm32l152xb.s  stm32l1xx_hal_msp.c  stm32l1xx_it.c  syscalls.c  system_stm32l1xx.c  uart_print.c  user_diskio.c
